--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,29 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/vars";
+@import "./utils/mixins";
 
-body {
-  background: $c-gray;
-}
+@import "./utils/normalize";
+
+// general
+@import "./blocks/page.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/container.scss";
+
+@import "./blocks/contents-sign.scss";
+@import "./blocks/two-buttons.scss";
+@import "./blocks/button-arrow.scss";
+@import "./blocks/button-mobl-up";
+
+// main content
+@import "./blocks/nav.scss";
+@import "./blocks/menu.scss";
+
+@import "./blocks/header.scss";
+@import "./blocks/event-card.scss";
+@import "./blocks/event-details.scss";
+@import "./blocks/lection-card.scss";
+@import "./blocks/actual.scss";
+@import "./blocks/gallery.scss";
+
+@import "./blocks/subscribe.scss";
+@import "./blocks/footer.scss";
