--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,19 @@
+// colors
 $c-gray: #eee;
+$accent-color: #1a5a4c;
+$text-color: #0f0e08;
+$accent-2: #f14a27;
+
+$icon-width: 18px;
+$mobile-button-height: 50px;
+$desktop-button-height: 70px;
+
+// content max-width
+$mobile-content-maxw: 280px;
+$tablet-content-maxw: 700px;
+$desktop-content-maxw: 1170px;
+$large-content-maxw: 1570px;
+
+$header-mobl-hight: 300px;
+$header-deskt-hight: 655px;
+$header-tablt-hight: 385px;
